--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListView.less
@@ -113,13 +113,15 @@
 }
 
 .tab-content {
+  background: purple;
+
   & > div > div > div {
-    height: 100%;
+    height: 100%; 
 
     & > div {
       height: ~"calc(100% - 30px)";
     }
-  }
+  } 
 
   & > div > div {
     /* "overflow: auto" is set inline by UberFire/AppFormer since since most of editors have scroll bars.
