--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListView.less
@@ -112,18 +112,22 @@
   }
 }
 
-.tab-content {
-  & > div > div > div {
-    height: 100%;
+.qe-list-bar-content-Project-Diagram-Editor {
+  .tab-content {
+    background-color: green;
 
-    & > div {
-      height: ~"calc(100% - 30px)";
+    & > div > div > div {
+      height: 100%;
+
+      & > div {
+        height: ~"calc(100% - 30px)";
+      }
     }
-  }
 
-  & > div > div {
-    /* "overflow: auto" is set inline by UberFire/AppFormer since since most of editors have scroll bars.
-     * However the DMN Data Types has a fixed header with internal scrollbars. */
-    overflow: hidden !important;
+    & > div > div {
+      /* "overflow: auto" is set inline by UberFire/AppFormer since since most of editors have scroll bars.
+       * However the DMN Data Types has a fixed header with internal scrollbars. */
+      overflow: hidden !important;
+    }
   }
 }
