DROOLS-3665: [DMN Designer] Data Types - Constraints (Range/Enumeration) - Add "Time" component when the type is "Time"

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/constraint/range/DataTypeConstraintRangeView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/constraint/range/DataTypeConstraintRangeView.less
@@ -20,6 +20,7 @@
     padding-top: 10px;
   }
 
+  .col-md-6,
   .col-md-12 {
     padding-left: 0;
     padding-right: 0;
@@ -32,7 +33,7 @@
   }
 
   .btn.dropdown-toggle.btn-default {
-    width: 120px;
+    width: 183px;
   }
 
   hr {
@@ -91,5 +92,34 @@
         display: inline-block;
       }
     }
+  }
+  .time-input-field {
+    width: 210px;
+    margin-top: -5px;
+  }
+
+  .btn-toggle-timezone {
+    margin-left: 0;
+    margin-top: 3px;
+    padding: 0;
+    width: 26px;
+    height: 26px;
+    font-size: 16px;
+    line-height: 16px;
+    display: inline-block;
+  }
+
+  .dropdown-toggle {
+    width: 160px;
+  }
+
+  .btn-group {
+    width: 160px;
+  }
+
+  .bootstrap-select.form-control:not([class*=col-]) {
+    width: 160px;
+    margin-top: -5px;
+    margin-left: -2px;
   }
 }
