--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/constraint/common/typed/time/TimeSelectorView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/constraint/common/typed/time/TimeSelectorView.less
@@ -22,18 +22,24 @@
 
   .btn-group {
     width: 160px;
+    display: inline-block !important;
   }
 
-  .bootstrap-select.form-control:not([class*=col-]) {
+  .bootstrap-select {
     width: 160px;
-    margin-top: -5px;
-    margin-left: -2px;
+    display: inline-block !important;
   }
 
   .toggle-icon {
     margin: 0;
     padding: 0;
     color: #0088ce;
+  }
+
+  .selector-container {
+    width: 160px;
+    display: inline-block;
+    vertical-align: top;
   }
 }
 
@@ -49,7 +55,7 @@
 
 .time-zone-selector {
   width: 160px;
-  display: inline;
+  display: inline-block;
 }
 
 .time-input-field {
