--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/constraint/enumeration/DataTypeConstraintEnumerationView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/constraint/enumeration/DataTypeConstraintEnumerationView.less
@@ -47,6 +47,10 @@
     user-select: none;
     height: 40px;
 
+    &.highlighted {
+      z-index: 2;
+    }
+
     [data-field="value-text"] {
       display: inline-block;
       padding: 5px 0;
