--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/constraint/range/DataTypeConstraintRangeView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/constraint/range/DataTypeConstraintRangeView.less
@@ -24,6 +24,8 @@
   .col-md-12 {
     padding-left: 0;
     padding-right: 0;
+    position: relative;
+    z-index: 1;
   }
 
   .input-field {
@@ -50,6 +52,7 @@
     padding-top: 0;
     padding-left: 10px;
     padding-right: 10px;
+    z-index: 0;
   }
 
   .controls-container {
@@ -93,7 +96,8 @@
       }
     }
   }
-  .time-input-field {
+
+  input.time-input-field {
     width: 210px;
     margin-top: -5px;
   }
