--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/decision/included/components/DecisionComponentsItemView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/decision/included/components/DecisionComponentsItemView.less
@@ -5,7 +5,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *       http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -14,18 +14,28 @@
  * limitations under the License.
  */
 
-package org.kie.workbench.common.dmn.api.editors.types;
+[data-i18n-prefix="DecisionComponentsItemView."] {
+  background: #FFF;
+  border: 1px solid #D7D7D7;
+  margin: 10px 0 0;
+  padding: 10px;
+  height: 55px;
 
-import java.util.List;
+  img {
+    width: 20px;
+    float: left;
+    height: 20px;
+    margin: 6px 15px 0 5px;
+  }
 
-import org.guvnor.common.services.project.model.WorkspaceProject;
-import org.jboss.errai.bus.server.annotations.Remote;
+  h5 {
+    font-weight: bold;
+    margin: 0 0 2px 0;
+    color: #444;
+  }
 
-@Remote
-public interface DMNIncludeModelsService {
-
-    List<DMNIncludeModel> loadModels(final WorkspaceProject rootPath);
-
-    List<DMNIncludedNode> loadNodesByNamespaces(final WorkspaceProject workspaceProject,
-                                                final List<String> namespaces);
+  p {
+    margin: 0;
+    color: #555;
+  }
 }
